# TRIOMA

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Creating a user interface (UI) in Python.md  ExploreRegimes.ipynb  LICENSE  PAV_extractor.ipynb  PRE_COMMIT_SETUP.md  README.md  Ver_against_comsol.ipynb  Verification_analytical_eff.ipynb  Verification_analytical_eff_LM.ipynb  breedingBlanket.py  component.py  componentMap.py  component_tools.py  conf.py  correlations.py  example_simulation.py  fuelCycle.py  fuelingSystem.py  genindex.html  heat_exchanger.py  hx_test.ipynb  index.html  liquid_metals.py  mixed_regime.ipynb  molten_salts.py  myproject.html  myproject.rst  objects.inv  plantDoubleParametric copy.ipynb  plantDoubleParametric.ipynb  plasma.py  port.py  py-modindex.html  pyproject.toml  recirculation.ipynb  (+10 more)
.github/workflows/: build_docs.yml  main.yml  python-publish.yml
COMSOL/test_inv/: test_inv.ipynb  test_invLdep.ipynb
Examples/: ExploreRegimes.ipynb  GLC_tutorial.ipynb  GLC_tutorial_ms.ipynb  Heat_exchanger_tutorial.ipynb  PAV_extractor.ipynb  Verification_analytical_eff_LM.ipynb  Verification_analytical_eff_MS.ipynb  circuit_tutorial.ipynb  compare_efficiency_an_methods.ipynb  efficiencymap.ipynb  feasibility_screening.ipynb  mixed_regime.ipynb  modelicaVEV copy.ipynb  modelicaVEV.ipynb  plantDoubleParametric.ipynb  recirculation.ipynb  try_circuit.ipynb  try_frac_HX.ipynb  tutorial.ipynb
_build/doctrees/: environment.pickle  index.doctree  myproject.doctree
_build/html/: .buildinfo  genindex.html  index.html  myproject.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_sources/: index.rst.txt  myproject.rst.txt
_build/html/_static/: documentation_options.js
_sources/: index.rst.txt  myproject.rst.txt
docs/: conf.py  index.rst  myproject.rst  theory.md
src/TRIOMA/: __init__.py
src/TRIOMA/tools/: BreedingBlanket.py  Circuit.py  TriomaClass.py  __init__.py  component_tools.py  correlations.py  extractor.py  liquid_metals.py  materials.py  (+1 more)
test/: test_component_tools.py  test_correlations.py  test_init.py  test_pyproject.py  test_trioma_class.py
tools/: UI.py  component_tools.py  correlations.py  extractor.py  liquid_metals.py  materials.py  molten_salts.py
(+5 files in other folders)
