[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "TRIOMA"
authors = [
    {name = "Gabriele Ferrero, Samuele Meschini", email = "gabriele.ferrero@polito.it"}
]
description = "Outer fuel cycle component models for design and optimization of fusion reactors"
version = "0.1.8"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "numpy>=1.24.0,<2.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
    "pre-commit>=3.5.0",
    "black>=24.1.1",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "pydocstyle>=6.3.0",
    "bandit>=1.7.5",
    "autopep8>=2.0.4"
]
